getInstitutionOnboardingData implementation