@@ -1,11 +1,12 @@
 package it.pagopa.selfcare.onboarding.core;
 
+import it.pagopa.selfcare.commons.base.security.SelfCareAuthority;
+import it.pagopa.selfcare.commons.base.security.SelfCareUser;
 import it.pagopa.selfcare.commons.utils.TestUtils;
 import it.pagopa.selfcare.onboarding.connector.api.PartyConnector;
 import it.pagopa.selfcare.onboarding.connector.api.ProductsConnector;
 import it.pagopa.selfcare.onboarding.connector.model.InstitutionOnboardingData;
 import it.pagopa.selfcare.onboarding.connector.model.RelationshipInfo;
-import it.pagopa.selfcare.onboarding.connector.model.RelationshipState;
 import it.pagopa.selfcare.onboarding.connector.model.RelationshipsResponse;
 import it.pagopa.selfcare.onboarding.connector.model.institutions.InstitutionInfo;
 import it.pagopa.selfcare.onboarding.connector.model.onboarding.*;
@@ -20,13 +21,14 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.function.Executable;
 import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.authentication.TestingAuthenticationToken;
+import org.springframework.security.test.context.TestSecurityContextHolder;
 
 import javax.validation.ValidationException;
-import java.util.Collection;
-import java.util.EnumMap;
-import java.util.EnumSet;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
+import static it.pagopa.selfcare.onboarding.connector.model.RelationshipState.ACTIVE;
 import static it.pagopa.selfcare.onboarding.core.InstitutionServiceImpl.*;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -59,7 +61,6 @@ class InstitutionServiceImplTest {
     }
 
 
-    //TODO add test for institutionType
     @Test
     void onboarding_nullRoleMapping() {
         // given
@@ -242,6 +243,7 @@ class InstitutionServiceImplTest {
         captured.getUsers().forEach(userInfo -> Assertions.assertEquals(productRole, userInfo.getProductRole()));
         Mockito.verifyNoMoreInteractions(productsConnectorMock, partyConnectorMock);
     }
+
     @Test
     void onboarding_noRelationshipForSubProduct() {
         //given
@@ -456,7 +458,7 @@ class InstitutionServiceImplTest {
     }
 
     @Test
-    void getManager_nullInstitutionId() {
+    void getInstitutionOnboardingData_nullInstitutionId() {
         //given
         String institutionId = null;
         String productId = "productId";
@@ -469,49 +471,235 @@ class InstitutionServiceImplTest {
     }
 
     @Test
-    void getManager_emptyResult() {
-        //given
+    void getInstitutionOnboardingData_noAuthentication() {
+        //String
         String institutionId = "institutionId";
         String productId = "productId";
         //when
         Executable executable = () -> institutionService.getInstitutionOnboardingData(institutionId, productId);
         //then
-        ResourceNotFoundException e = assertThrows(ResourceNotFoundException.class, executable);
-        assertEquals("No Manager found for given institution", e.getMessage());
+        IllegalStateException e = assertThrows(IllegalStateException.class, executable);
+        assertEquals("Authentication is required", e.getMessage());
+        Mockito.verifyNoInteractions(partyConnectorMock);
+    }
+
+    @Test
+    void getInstitutionOnboardingData_nullPrincipal() {
+        //given
+        String institutionId = "institutionId";
+        String productId = "productId";
+        TestSecurityContextHolder.setAuthentication(new TestingAuthenticationToken(null, null));
+        //when
+        Executable executable = () -> institutionService.getInstitutionOnboardingData(institutionId, productId);
+        //then
+        IllegalStateException e = assertThrows(IllegalStateException.class, executable);
+        assertEquals("Not SelfCareUser principal", e.getMessage());
+        Mockito.verifyNoInteractions(partyConnectorMock);
+    }
+
+    @Test
+    void getInstitutionOnboardingData_notAdmin() {
+        //given
+        String institutionId = "institutionId";
+        String productId = "productId";
+        String loggedUser = "loggedUser";
+        SelfCareUser selfCareUser = SelfCareUser.builder(loggedUser).email("test@example.com").build();
+        TestingAuthenticationToken authenticationToken = new TestingAuthenticationToken(selfCareUser, null);
+        TestSecurityContextHolder.setAuthentication(authenticationToken);
+        UserInfo userInfoMock = TestUtils.mockInstance(new UserInfo(), "setId", "setRole");
+        userInfoMock.setId(loggedUser);
+        Mockito.when(partyConnectorMock.getUsers(Mockito.anyString(), Mockito.any()))
+                .thenReturn(Collections.emptyList());
+        InstitutionInfo institutionInfoMock = TestUtils.mockInstance(new InstitutionInfo());
+        BillingData billingDataMock = TestUtils.mockInstance(new BillingData());
+        institutionInfoMock.setBilling(billingDataMock);
+        Mockito.when(partyConnectorMock.getOnboardedInstitution(Mockito.anyString()))
+                .thenReturn(institutionInfoMock);
+        //when
+        InstitutionOnboardingData institutionOnboardingData = institutionService.getInstitutionOnboardingData(institutionId, productId);
+        //then
+        assertNotNull(institutionOnboardingData);
+        assertNull(institutionOnboardingData.getManager());
+        assertNotNull(institutionOnboardingData.getInstitution());
+        assertEquals(institutionInfoMock.getInstitutionId(), institutionOnboardingData.getInstitution().getInstitutionId());
+        assertEquals(institutionInfoMock.getAddress(), institutionOnboardingData.getInstitution().getAddress());
+        assertEquals(institutionInfoMock.getInstitutionType(), institutionOnboardingData.getInstitution().getInstitutionType());
+        assertEquals(institutionInfoMock.getCategory(), institutionOnboardingData.getInstitution().getCategory());
+        assertEquals(institutionInfoMock.getDescription(), institutionOnboardingData.getInstitution().getDescription());
+        assertEquals(institutionInfoMock.getDescription(), institutionOnboardingData.getInstitution().getDescription());
+        assertEquals(institutionInfoMock.getTaxCode(), institutionOnboardingData.getInstitution().getTaxCode());
+        assertEquals(institutionInfoMock.getZipCode(), institutionOnboardingData.getInstitution().getZipCode());
+        assertEquals(institutionInfoMock.getDigitalAddress(), institutionOnboardingData.getInstitution().getDigitalAddress());
+        assertEquals(institutionInfoMock.getBilling().getVatNumber(), institutionOnboardingData.getInstitution().getBilling().getVatNumber());
+        assertEquals(institutionInfoMock.getBilling().getRecipientCode(), institutionOnboardingData.getInstitution().getBilling().getRecipientCode());
+        assertEquals(institutionInfoMock.getBilling().isPublicService(), institutionOnboardingData.getInstitution().getBilling().isPublicService());
         ArgumentCaptor<UserInfo.UserInfoFilter> filterCaptor = ArgumentCaptor.forClass(UserInfo.UserInfoFilter.class);
         Mockito.verify(partyConnectorMock, Mockito.times(1))
                 .getUsers(Mockito.eq(institutionId), filterCaptor.capture());
         UserInfo.UserInfoFilter capturedFilter = filterCaptor.getValue();
-        assertEquals(capturedFilter.getAllowedStates().get(), EnumSet.of(RelationshipState.ACTIVE));
-        assertEquals(capturedFilter.getRole().get(), PartyRole.MANAGER);
+        assertEquals(capturedFilter.getAllowedStates().get(), EnumSet.of(ACTIVE));
+        assertEquals(capturedFilter.getRole().get(), EnumSet.of(PartyRole.MANAGER, PartyRole.DELEGATE, PartyRole.SUB_DELEGATE));
         assertEquals(capturedFilter.getProductId().get(), productId);
+        assertEquals(capturedFilter.getUserId().get(), loggedUser);
+        Mockito.verify(partyConnectorMock, Mockito.times(1))
+                .getOnboardedInstitution(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(partyConnectorMock);
     }
+
+    @Test
+    void getInstitutionOnboardingData_ManagerNotFound() {
+        //given
+        String institutionId = "institutionId";
+        String productId = "productId";
+        String loggedUser = "loggedUser";
+        EnumSet<PartyRole> roles = Arrays.stream(PartyRole.values())
+                .filter(partyRole -> SelfCareAuthority.ADMIN.equals(partyRole.getSelfCareAuthority()))
+                .collect(Collectors.toCollection(() -> EnumSet.noneOf(PartyRole.class)));
+        SelfCareUser selfCareUser = SelfCareUser.builder(loggedUser).email("test@example.com").build();
+        TestingAuthenticationToken authenticationToken = new TestingAuthenticationToken(selfCareUser, null);
+        TestSecurityContextHolder.setAuthentication(authenticationToken);
+        UserInfo userInfoMock = TestUtils.mockInstance(new UserInfo(), "setId", "setRole");
+        userInfoMock.setId(loggedUser);
+        UserInfo.UserInfoFilter filterLoggedUsers = new UserInfo.UserInfoFilter();
+        filterLoggedUsers.setRole(Optional.of(EnumSet.of(PartyRole.DELEGATE)));
+        Mockito.when(partyConnectorMock.getUsers(Mockito.anyString(), Mockito.any()))
+                .thenAnswer(invocation -> {
+                            UserInfo.UserInfoFilter argument = invocation.getArgument(1, UserInfo.UserInfoFilter.class);
+                            if (argument.getUserId().isPresent())
+                                return Collections.singletonList(userInfoMock);
+                            else
+                                return Collections.emptyList();
+                        }
+                );
+        //when
+        Executable executable = () -> institutionService.getInstitutionOnboardingData(institutionId, productId);
+        //then
+        ResourceNotFoundException e = assertThrows(ResourceNotFoundException.class, executable);
+        assertEquals("No Manager found for given institution", e.getMessage());
+
+        ArgumentCaptor<UserInfo.UserInfoFilter> filterCaptor = ArgumentCaptor.forClass(UserInfo.UserInfoFilter.class);
+        Mockito.verify(partyConnectorMock, Mockito.times(2))
+                .getUsers(Mockito.eq(institutionId), filterCaptor.capture());
+        List<UserInfo.UserInfoFilter> capturedFilters = filterCaptor.getAllValues();
+
+        assertEquals(roles, capturedFilters.get(0).getRole().get());
+        assertEquals(EnumSet.of(ACTIVE), capturedFilters.get(0).getAllowedStates().get());
+        assertEquals(loggedUser, capturedFilters.get(0).getUserId().get());
+        assertEquals(productId, capturedFilters.get(0).getProductId().get());
+        assertTrue(capturedFilters.get(0).getProductRoles().isEmpty());
+
+        assertEquals(EnumSet.of(PartyRole.MANAGER), capturedFilters.get(1).getRole().get());
+        assertEquals(productId, capturedFilters.get(1).getProductId().get());
+        assertTrue(capturedFilters.get(1).getProductRoles().isEmpty());
+        assertTrue(capturedFilters.get(1).getUserId().isEmpty());
+        assertEquals(EnumSet.of(ACTIVE), capturedFilters.get(1).getAllowedStates().get());
+
+        Mockito.verify(partyConnectorMock, Mockito.times(0))
+                .getOnboardedInstitution(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(partyConnectorMock);
+    }
+
+    @Test
+    void getInstitutionOnboardingData_institutionNotFound() {
+        //given
+        String institutionId = "institutionId";
+        String productId = "productId";
+        String loggedUser = "loggedUser";
+        SelfCareUser selfCareUser = SelfCareUser.builder(loggedUser).email("test@example.com").build();
+        TestingAuthenticationToken authenticationToken = new TestingAuthenticationToken(selfCareUser, null);
+        TestSecurityContextHolder.setAuthentication(authenticationToken);
+        UserInfo userInfoMock = TestUtils.mockInstance(new UserInfo(), "setId", "setRole");
+        userInfoMock.setId(loggedUser);
+        Mockito.when(partyConnectorMock.getUsers(Mockito.anyString(), Mockito.any()))
+                .thenReturn(Collections.emptyList());
+        //when
+        Executable executable = () -> institutionService.getInstitutionOnboardingData(institutionId, productId);
+        //then
+        ResourceNotFoundException e = assertThrows(ResourceNotFoundException.class, executable);
+        assertEquals(String.format("Institution %s not found", institutionId), e.getMessage());
+        ArgumentCaptor<UserInfo.UserInfoFilter> filterCaptor = ArgumentCaptor.forClass(UserInfo.UserInfoFilter.class);
+        Mockito.verify(partyConnectorMock, Mockito.times(1))
+                .getUsers(Mockito.eq(institutionId), filterCaptor.capture());
+        UserInfo.UserInfoFilter capturedFilter = filterCaptor.getValue();
+        assertEquals(capturedFilter.getAllowedStates().get(), EnumSet.of(ACTIVE));
+        assertEquals(capturedFilter.getRole().get(), EnumSet.of(PartyRole.MANAGER, PartyRole.DELEGATE, PartyRole.SUB_DELEGATE));
+        assertEquals(capturedFilter.getProductId().get(), productId);
+        assertEquals(capturedFilter.getUserId().get(), loggedUser);
+        Mockito.verify(partyConnectorMock, Mockito.times(1))
+                .getOnboardedInstitution(Mockito.eq(institutionId));
+        Mockito.verifyNoMoreInteractions(partyConnectorMock);
+    }
+
 
     @Test
     void getInstitutionOnboardingData() {
         //given
         String institutionId = "institutionId";
         String productId = "productId";
-        UserInfo userInfoMock = TestUtils.mockInstance(new UserInfo(), "setRole");
-        userInfoMock.setRole(PartyRole.MANAGER);
+        String loggedUser = "loggedUser";
+        EnumSet<PartyRole> roles = Arrays.stream(PartyRole.values())
+                .filter(partyRole -> SelfCareAuthority.ADMIN.equals(partyRole.getSelfCareAuthority()))
+                .collect(Collectors.toCollection(() -> EnumSet.noneOf(PartyRole.class)));
+        SelfCareUser selfCareUser = SelfCareUser.builder(loggedUser).email("test@example.com").build();
+        TestingAuthenticationToken authenticationToken = new TestingAuthenticationToken(selfCareUser, null);
+        TestSecurityContextHolder.setAuthentication(authenticationToken);
+        UserInfo userInfoMock = TestUtils.mockInstance(new UserInfo(), "setId", "setRole");
+        userInfoMock.setId(loggedUser);
+        UserInfo userInfoManager = TestUtils.mockInstance(new UserInfo());
+        userInfoManager.setRole(PartyRole.MANAGER);
         Mockito.when(partyConnectorMock.getUsers(Mockito.anyString(), Mockito.any()))
-                .thenReturn(List.of(userInfoMock));
+                .thenAnswer(invocation -> {
+                            UserInfo.UserInfoFilter argument = invocation.getArgument(1, UserInfo.UserInfoFilter.class);
+                            if (argument.getUserId().isPresent())
+                                return Collections.singletonList(userInfoMock);
+                            else
+                                return Collections.singleton(userInfoManager);
+                        }
+                );
+        InstitutionInfo institutionInfoMock = TestUtils.mockInstance(new InstitutionInfo());
+        BillingData billingDataMock = TestUtils.mockInstance(new BillingData());
+        institutionInfoMock.setBilling(billingDataMock);
+        Mockito.when(partyConnectorMock.getOnboardedInstitution(Mockito.anyString()))
+                .thenReturn(institutionInfoMock);
         //when
         InstitutionOnboardingData institutionOnboardingData = institutionService.getInstitutionOnboardingData(institutionId, productId);
         //then
         assertNotNull(institutionOnboardingData);
-        assertEquals(userInfoMock.getInstitutionId(), institutionOnboardingData.getManager().getInstitutionId());
-        assertEquals(userInfoMock.getId(), institutionOnboardingData.getManager().getId());
-        assertEquals(userInfoMock.getEmail(), institutionOnboardingData.getManager().getEmail());
-        assertEquals(userInfoMock.getRole(), institutionOnboardingData.getManager().getRole());
+        assertNotNull(institutionOnboardingData.getManager());
+        assertEquals(userInfoManager, institutionOnboardingData.getManager());
+        assertNotNull(institutionOnboardingData.getInstitution());
+        assertEquals(institutionInfoMock.getInstitutionId(), institutionOnboardingData.getInstitution().getInstitutionId());
+        assertEquals(institutionInfoMock.getAddress(), institutionOnboardingData.getInstitution().getAddress());
+        assertEquals(institutionInfoMock.getInstitutionType(), institutionOnboardingData.getInstitution().getInstitutionType());
+        assertEquals(institutionInfoMock.getCategory(), institutionOnboardingData.getInstitution().getCategory());
+        assertEquals(institutionInfoMock.getDescription(), institutionOnboardingData.getInstitution().getDescription());
+        assertEquals(institutionInfoMock.getDescription(), institutionOnboardingData.getInstitution().getDescription());
+        assertEquals(institutionInfoMock.getTaxCode(), institutionOnboardingData.getInstitution().getTaxCode());
+        assertEquals(institutionInfoMock.getZipCode(), institutionOnboardingData.getInstitution().getZipCode());
+        assertEquals(institutionInfoMock.getDigitalAddress(), institutionOnboardingData.getInstitution().getDigitalAddress());
+        assertEquals(institutionInfoMock.getBilling().getVatNumber(), institutionOnboardingData.getInstitution().getBilling().getVatNumber());
+        assertEquals(institutionInfoMock.getBilling().getRecipientCode(), institutionOnboardingData.getInstitution().getBilling().getRecipientCode());
+        assertEquals(institutionInfoMock.getBilling().isPublicService(), institutionOnboardingData.getInstitution().getBilling().isPublicService());
+
         ArgumentCaptor<UserInfo.UserInfoFilter> filterCaptor = ArgumentCaptor.forClass(UserInfo.UserInfoFilter.class);
-        Mockito.verify(partyConnectorMock, Mockito.times(1))
+        Mockito.verify(partyConnectorMock, Mockito.times(2))
                 .getUsers(Mockito.eq(institutionId), filterCaptor.capture());
-        UserInfo.UserInfoFilter capturedFilter = filterCaptor.getValue();
-        assertEquals(capturedFilter.getAllowedStates().get(), EnumSet.of(RelationshipState.ACTIVE));
-        assertEquals(capturedFilter.getRole().get(), PartyRole.MANAGER);
-        assertEquals(capturedFilter.getProductId().get(), productId);
+        List<UserInfo.UserInfoFilter> capturedFilters = filterCaptor.getAllValues();
+
+        assertEquals(roles, capturedFilters.get(0).getRole().get());
+        assertEquals(EnumSet.of(ACTIVE), capturedFilters.get(0).getAllowedStates().get());
+        assertEquals(loggedUser, capturedFilters.get(0).getUserId().get());
+        assertEquals(productId, capturedFilters.get(0).getProductId().get());
+        assertTrue(capturedFilters.get(0).getProductRoles().isEmpty());
+
+        assertEquals(EnumSet.of(PartyRole.MANAGER), capturedFilters.get(1).getRole().get());
+        assertEquals(productId, capturedFilters.get(1).getProductId().get());
+        assertTrue(capturedFilters.get(1).getProductRoles().isEmpty());
+        assertTrue(capturedFilters.get(1).getUserId().isEmpty());
+        assertEquals(EnumSet.of(ACTIVE), capturedFilters.get(1).getAllowedStates().get());
+
+        Mockito.verify(partyConnectorMock, Mockito.times(1))
+                .getOnboardedInstitution(Mockito.eq(institutionId));
         Mockito.verifyNoMoreInteractions(partyConnectorMock);
 
     }
